--- a/templates/edit.html
+++ b/templates/edit.html
@@ -40,7 +40,7 @@
             <button type="submit">保存</button>
         </form>
 
-        <a href="{{ url_for('index') }}">← 戻る</a>
+        <a href="{{ url_for('reminder.index') }}">← 戻る</a>
     </div>
 </body>
 
