--- a/templates/edit_material.html
+++ b/templates/edit_material.html
@@ -15,7 +15,7 @@
             <input type="text" id="name" name="name" value="{{ material[1] }}" required>
             <button type="submit">保存</button>
         </form>
-        <p><a href="{{ url_for('materials') }}">← 戻る</a></p>
+        <p><a href="{{ url_for('materials.materials') }}">← 戻る</a></p>
     </div>
 </body>
 
