--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,11 @@
         <h1>🏠 学習支援アプリ ホーム</h1>
 
         <ul class="menu-list">
-            <li><a href="{{ url_for('calendar_view') }}">📅 カレンダー・予定一覧</a></li>
-            <li><a href="{{ url_for('todo') }}">📋 ToDoリスト</a></li>
-            <li><a href="{{ url_for('timer') }}">⏱ タイマー</a></li>
-            <li><a href="{{ url_for('materials') }}">📚 教材管理</a></li>
-            <li><a href="{{ url_for('study_log') }}">📘 学習ログ</a></li>
+            <li><a href="{{ url_for('reminder.calendar_view') }}">📅 カレンダー・予定一覧</a></li>
+            <li><a href="{{ url_for('todo.todo') }}">📋 ToDoリスト</a></li>
+            <li><a href="{{ url_for('timer.timer') }}">⏱ タイマー</a></li>
+            <li><a href="{{ url_for('materials.materials') }}">📚 教材管理</a></li>
+            <li><a href="{{ url_for('study_log.study_log') }}">📘 学習ログ</a></li>
         </ul>
     </div>
 </body>
