--- a/templates/study_log.html
+++ b/templates/study_log.html
@@ -60,7 +60,7 @@
             });
         </script>
 
-        <p><a href="{{ url_for('index') }}">← ホームに戻る</a></p>
+        <p><a href="{{ url_for('reminder.index') }}">← ホームに戻る</a></p>
     </div>
 </body>
 
