--- a/templates/timer.html
+++ b/templates/timer.html
@@ -43,7 +43,7 @@
             <button onclick="stopTimer()">⏹ 終了</button>
         </div>
 
-        <p><a href="{{ url_for('index') }}">← ホームに戻る</a></p>
+        <p><a href="{{ url_for('reminder.index') }}">← ホームに戻る</a></p>
     </div>
 
     <script>
@@ -105,7 +105,6 @@
                 location.reload();
             });
 
-            // 状態リセット
             timer = null;
             elapsed = 0;
             isPaused = false;
